# Ymerflow

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLI.md  CNAME  PLAN.md  README.md  backup.sh  config.env.example  package-lock.json  package.json  requirements.txt  restore.sh  run.sh  runall.sh  setup.py
backend/: Dockerfile  alembic.ini  auth_deps.py  cli.py  config.py  database.py  exceptions.py  hooks.py  main.py  migration_path.py  plugin_assets.py  requirements.txt  run.sh  test_log_manager_integration.py  widget_schemas.json
billing/: __init__.py  config.py  models.py
debug-harness/: CHANGELOG.md  README.md  SETUP_GUIDE.md  config.json.template  debug_runner.py  extract_config.py  run_debug.sh  run_debug.sh.old  runner_debug.py
dev/: cleanup-all.sh  cleanup-minikube.sh  images.env  monitor-services.sh  prepull-images.sh  restart-backend.sh  restart-frontend.sh  restart-minio-portforward.sh  runall.sh  setup-minikube-remote.sh.in  setup-minikube.sh  setup-minio.sh  setup-registry.sh  stop-all.sh  test-minio.py
docker/: Dockerfile.base  build.sh  update_bootstrap_environment.py
docs/: deployment.md  development.md  em_solvers.csv  mcp-tools.md  plugin-author-guide.md  quickstart.md  (+3 more)
flyte-tasks/: pyproject.toml  setup.py
flyte-tasks/flyte_tasks/: __init__.py  wrapper.py
flyte-tasks/flyte_tasks/processes/: __init__.py  create_environment.py  fft.py  import_data.py  inversion.py
flyte-tasks/flyte_tasks/utils/: __init__.py  backend_client.py
tests/plugins/test-backend-plugin/: pyproject.toml  setup.py
tests/plugins/test-backend-plugin/frontend/: package.json
tests/plugins/test-backend-plugin/frontend/src/: TestBackendWidget.jsx  index.jsx
tests/plugins/test-backend-plugin/test_backend_plugin/: __init__.py
(+488 files in other folders)
